# cpp-practices-and-examples

./: .gitignore  README.md  SkeletalMeshTest3.uproject  builder.cpp  prototype.cpp  test-file
Config/: DefaultEngine.ini  DefaultGame.ini
EECS268/: LICENSE
EECS268/Lab01/: Executive.cpp  VoterRegistrationRecord.cpp  VoterRegistrationRecord.h
EECS268/Lab02/: .gitignore  LinkedList.h  LinkedList.hpp  Makefile  MedicalExecutive.h  main.cpp
EECS268/Lab03/include/: Executive.h  NoIntersection.h
EECS268/Lab03/src/: CMakeLists.txt
EECS268/Lab03/tests/: CMakeLists.txt  test_MathTools.cpp
EECS_168/Lab2/: ComputeCircleArea.java
EECS_168/Lab9/: Lab9.java
EECS_268/Lab1/: lab1
EECS_268/Lab10/: Position.cpp
EECS_268/Lab10/Nguyen-2465007-Lab10/: MazeCreationException.cpp  MazeCreationException.h  MazeReader.h
EECS_268/Lab2/: .nfs000000002054c4e1000000be  lab2
EECS_268/Lab3/: Box.cpp  main.cpp
EECS_268/Lab5/: BinarySearchTree.h
EECS_268/Lab5/Nguyen-2465007-Lab-05/: BinarySearchTree.hpp  Node.h  main.cpp
EECS_268/Lab6/: MergeSort.hpp
EECS_268/Lab6/Nguyen-2465007-Lab-06/: main.cpp
EECS_268/Lab7/: BubbleSort.h  InsertionSort.hpp  MergeSort.h  Sort.h
EECS_268/Lab7/Nguyen-2465007-Lab-07/: InsertionSort.h  MergeSort.hpp  main.cpp
EECS_268/Lab8/: AnimalPen.cpp  CyberChicken.h  FarmAnimal.h
EECS_268/Lab8/Nguyen-2465007-Lab-08/: Cow.h  CyberChicken.cpp  makefile
EECS_268/Lab9/: .Queue.cpp.swp  PreconditionViolationException.cpp  Queue.cpp  main.cpp
EECS_268/Lab9/Nguyen-2465007-Lab-09/: makefile
EECS_268/Lost+Found/Lab2/: .nfs000000002054c4e6000000bb  .nfs000000002054c4e8000000c0  .nfs000000002054c4ec000000d5  Pokemon.h~  main.cpp~  makefile
EECS_368/: README.md
EECS_368/EECS_368_HW#3/: MakeAccount1PA.java  Test.java
HenrySchoolProjects/EECS_168/: README.md
HenrySchoolProjects/EECS_168/Lab10/: CircleArray.java
HenrySchoolProjects/EECS_168/Lab11/: BubbleSort.java  Lab11.java
HenrySchoolProjects/EECS_168/Lab12/: Letter_Counter.java
HenrySchoolProjects/EECS_168/Lab2/: CircleArea.java  ConvertTemperature.java
HenrySchoolProjects/EECS_168/Lab3/: Color.java  Tornado.java
HenrySchoolProjects/EECS_168/Lab4/: Lab4.java
HenrySchoolProjects/EECS_168/Lab5/: Factorial.java  SumOfOdd.java  Summation.java
HenrySchoolProjects/EECS_168/Lab6/: Triangles.java
HenrySchoolProjects/EECS_168/Lab7/: AddSubtract.java  SumOfDigits.java
HenrySchoolProjects/EECS_168/Lab8/: MyCircle.java  MyCircleTest.java
HenrySchoolProjects/EECS_268/: README.md
HenrySchoolProjects/EECS_268/Lab1/: main.cpp
HenrySchoolProjects/EECS_268/Lab10/: MazeReader.cpp  MazeWalker.cpp  MazeWalker.h  Position.h  main.cpp  makefile
HenrySchoolProjects/EECS_268/Lab2/: Dice.h  Pokemon.cpp  Pokemon.h  main.cpp
HenrySchoolProjects/EECS_268/Lab3/: Box.h  StackOfBoxes.cpp  StackOfBoxes.h  makefile
HenrySchoolProjects/EECS_268/Lab4/: Node.h  Node.hpp  StackOfNodes.h  StackOfNodes.hpp  main.cpp  makefile
HenrySchoolProjects/EECS_268/Lab5/: Node.hpp  makefile
HenrySchoolProjects/EECS_268/Lab6/: BubbleSort.h  BubbleSort.hpp  MergeSort.h  makefile
HenrySchoolProjects/EECS_268/Lab7/: BogoSort.h  BogoSort.hpp  BubbleSort.hpp  QuickSort.h  QuickSort.hpp  Sort.hpp  makefile
HenrySchoolProjects/EECS_268/Lab8/: AnimalPen.h  Chicken.cpp  Chicken.h  Cow.cpp  FarmAnimal.cpp  main.cpp
HenrySchoolProjects/EECS_268/Lab9/: PreconditionViolationException.h  Queue.h  Queue.hpp  QueueInterface.h
HenrySchoolProjects/EECS_368/: 368-HW#1-HenryNguyen.rkt  368-HW#2-HenryNguyen.rkt  README.md
HenrySchoolProjects/EECS_368/EECS_368_HW#3/: MakeAccount.java  MakeAccount1.java  MakeAccount1P.java  MakeAccount1PAT.java  Output  (+1 more)
Lab01/: .gitignore  Executive.cpp  Executive.h  Makefile  README.md  VoterRegistrationRecords.txt  Voter_Registration  main.cpp  voters.txt
Lab02/: City.cpp  City.h  Infection_Outbreak  MedicalExecutive.cpp  MedicalExecutive.h  Node.h  TestLinkedList  TestLinkedList.cpp  quarantineLog.txt  sample_input.txt
Lab03/: .gitignore  CMakeLists.txt  Executive.cpp  Executive.h  MathTools.cpp
Lab03/include/: CannotDetermineRoomDimensions.h  MathTools.h  MathToolsInterface.h  NegativeDiscriminant.h
Lab03/src/: Executive.cpp  main.cpp
Serializer/: .gitignore  .project  CMakeLists.txt  Serializer.h  main.cc
Source/SkeletalMeshTest3/: CameraDirector.cpp  MyAnimInstance.cpp  MyAnimInstance.h  NewActorComponent.cpp  NewActorComponent.h  SkeletalMeshTest3.Build.cs  SkeletalMeshTest3.cpp  SkeletalMeshTest3Character.cpp  SkeletalMeshTest3Character.h
UnrealTests/: .gitignore  README.md
UnrealTests/Config/: DefaultEngine.ini
UnrealTests/Source/: SkeletalMeshTest3.Target.cs  SkeletalMeshTest3Editor.Target.cs
include/: quicksort.h
quicksort/src/: main.cpp
(+6 files in other folders)
